--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
+astroid==2.12.10
+black==22.8.0
 certifi==2022.9.14
 charset-normalizer==2.1.1
 click==8.1.3
+dill==0.3.5.1
 idna==3.4
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
+mypy-extensions==0.4.3
 numpy==1.23.3
 pandas==1.4.4
+pathspec==0.10.1
+platformdirs==2.5.2
 psycopg2-binary==2.9.3
+pylint==2.15.2
 python-dateutil==2.8.2
 pytz==2022.2.1
 requests==2.28.1
 schedule==1.1.0
 six==1.16.0
+tomli==2.0.1
+tomlkit==0.11.4
 urllib3==1.26.12
+wrapt==1.14.1
